--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "start-chrome": "0.0.3"
+    "start-chrome": "0.0.3",
+    "tachyons": "^4.12.0"
   },
   "scripts": {
     "start": "BROWSER='chrome' react-scripts start",
